[package]
name = "serde_default_utils"
authors = ["Oleks Pickle <oleks.pickle@gmail.com>"]
version = "0.2.2"
edition = "2021"
categories = ["encoding", "no-std", "no-std::no-alloc"]
description = "A set of simple helper functions to cut corners with serde_default"
keywords = ["serde", "serialization", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekspickle/serde_default_utils"

[features]
default = ["std", "inline-derive"]
std = []
inline-derive = ["serde-inline-default"]

[dependencies]
paste = "1.0.14"
serde-inline-default = { version = "0.2.0", optional = true }

[dev-dependencies]
expect-test = "1.4.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_default_utils = { path = "." }
