[package]
name = "serde_default_utils"
authors = ["Oleks Pickle <oleks.pickle@gmail.com>"]
version = "0.3.0"
edition = "2021"
categories = ["encoding", "no-std", "no-std::no-alloc"]
description = "A set of simple helper functions to cut corners with serde_default"
keywords = ["serde", "serialization", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekspickle/serde_default_utils"

[features]
default = ["std"]
std = []
inline = ["serde-inline-default"]

[dependencies]
paste = "1"
serde-inline-default = { version = "0.2", optional = true }

[dev-dependencies]
expect-test = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_default_utils = { path = "." }
